# esp32-smart-ventilation

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/drivers/: fan_driver.c  ntc_driver.c  pir_driver.c
main/include/: hal_interfaces.h  system_common.h
main/mocks/: mock_fan.c  mock_sensors.c
main/network/: wifi_station.c
main/storage/: config_manager.c
main/tasks/: task_control.c  task_sensor.c
main/web/: web_page.h  web_server.c
